# EDDI

./: .gitignore  README.md  dataset_list.json  download_ts_classification.py  pyproject.toml
configs/models/: moment.json
configs/models/tst/: tst_real_data.json
experiments/: drift_generator.py
models/: base.py  dispatcher.py  model_dev.py  model_utils.py  train_loop.py
utils/: data.py
